fix(atomic): improve spacing in atomic-result
https://coveord.atlassian.net/browse/KIT-1629

--- a/packages/atomic/src/components/atomic-result/atomic-result-row-desktop.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-row-desktop.pcss
@@ -1,5 +1,5 @@
 @define-mixin atomic-children-desktop $margin-small, $margin-small {
-  &.child-result {
+  &.child-result:not(.last-child) {
     margin-bottom: $margin-small;
   }
 
@@ -186,7 +186,7 @@
       'visual bottom-metadata bottom-metadata bottom-metadata'
       'visual children        children        children';
     grid-template-columns: minmax(0, min-content) auto 1fr auto;
-    grid-template-rows: repeat(6, auto) 1fr minmax(0, min-content);
+    grid-template-rows: repeat(7, minmax(0, min-content));
 
     atomic-result-section-visual {
       width: 2rem;
